--- a/src/com/cp/view/CouponView.mxml
+++ b/src/com/cp/view/CouponView.mxml
@@ -1,8 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<s:DataGroup xmlns:fx="http://ns.adobe.com/mxml/2009"
-			 xmlns:s="library://ns.adobe.com/flex/spark"
-			 >
+<s:SkinnableContainer xmlns:fx="http://ns.adobe.com/mxml/2009"
+					  xmlns:s="library://ns.adobe.com/flex/spark"
+					  xmlns:mx="library://ns.adobe.com/flex/mx"
+					  styleName="graphic scale whiteBackground2"
+					  >
 	<fx:Declarations>
-		<!-- Place non-visual elements (e.g., services, value objects) here -->
+		<mx:ListCollectionView id="couponList" />
 	</fx:Declarations>
-</s:DataGroup>
+
+	<s:Scroller width="100%"
+				height="100%"
+				interactionMode="touch"
+				skinClass="com.cp.skin.common.NoBarScroller"
+				>
+		<s:DataGroup dataProvider="{couponList}"
+					 itemRenderer="com.cp.itemRenderer.coupon.CouponItemRenderer"
+					 >
+			<s:layout>
+				<s:TileLayout horizontalGap="40"
+							  paddingBottom="40"
+							  paddingLeft="40"
+							  paddingRight="40"
+							  paddingTop="40"
+							  verticalGap="40"
+							  columnWidth="480"
+							  orientation="rows"
+							  requestedColumnCount="2"
+							  rowHeight="320"
+							  useVirtualLayout="true"
+							  />
+			</s:layout>
+		</s:DataGroup>
+	</s:Scroller>
+
+	<s:filters>
+		<s:DropShadowFilter blurX="20"
+							blurY="20"
+							inner="true"
+							/>
+	</s:filters>
+
+</s:SkinnableContainer>
