--- a/src/style/containers.css
+++ b/src/style/containers.css
@@ -105,6 +105,10 @@ s|Application.luminosityMask, s|SkinnableContainer.luminosityMask, s|SkinnableDa
 	background-image: Embed('/asset/resource.swf#diagonalCornerMask');
 }
 
+.gradientBlackLongButton {
+	background-image: Embed('/asset/resource.swf#gradientBlackLongButton');
+}
+
 /**
 from src
 **/
