--- a/src/com/cp/view/category/CategoryPopup.mxml
+++ b/src/com/cp/view/category/CategoryPopup.mxml
@@ -11,10 +11,6 @@
 						>
 
 	<fx:Declarations>
-		<fx:Number id="top">90</fx:Number>
-		<fx:Number id="right">400</fx:Number>
-
-
 		<mx:ListCollectionView id="categoryList" />
 
 		<!--
@@ -33,8 +29,6 @@
 		<![CDATA[
 			import com.cp.event.ui.CategoryListEvent;
 
-			import mx.core.UIComponent;
-
 			public var dispatch:Function;
 
 			public function show(event:CategoryListEvent):void
@@ -49,26 +43,25 @@
 		]]>
 	</fx:Script>
 
-	<s:Group width="{UIComponent(parent).width}"
-			 height="{UIComponent(parent).height}"
+	<s:Group x="{mainView.x}"
+			 y="{mainView.y}"
+			 width="{mainView.width}"
+			 height="{mainView.height}"
 			 >
-		<popup:ModalLayer height="1000"
-						  bottom="0"
-						  />
+		<popup:ModalLayer />
 
 		<category:CategoryList id="content"
-							   left="90"
-							   right="{right}"
-							   top="{top}"
-							   bottom="80"
+							   width="800"
+							   height="600"
+							   left="10"
+							   top="90"
 							   categoryList="{categoryList}"
 							   selectCategory="dispatch(event)"
 							   />
 
-		<common:PopupCloseButton horizontalCenter="{UIComponent(parent).width/2 - right}"
-								 verticalCenter="{-UIComponent(parent).height/2 + top}"
+		<common:PopupCloseButton horizontalCenter="{content.width + content.x - mainView.width / 2}"
+								 verticalCenter="{content.y - mainView.height / 2}"
 								 touchTap="open = false"
 								 />
-
 	</s:Group>
 </popup:PopUpWrapperBase>
