--- a/src/com/cp/itemRenderer/merchant/MerchantItemRenderer.mxml
+++ b/src/com/cp/itemRenderer/merchant/MerchantItemRenderer.mxml
@@ -19,21 +19,28 @@
 				destination="merchant"
 				/>
 
-	<s:SkinnableContainer left="0"
-						  right="{count.width/2}"
-						  top="{count.height/2}"
-						  bottom="0"
-						  styleName="graphic scale shadowedWhiteBackground"
-						  >
-		<s:BitmapImage horizontalCenter="0"
-					   verticalCenter="0"
-					   source="https://github.com/noachic/test/raw/master/src/asset/images/coupon/{merchant.merchantId}/merch.png"
-					   />
-	</s:SkinnableContainer>
+	<s:BitmapImage right="{count.width/2}"
+				   top="{count.height/2}"
+				   source="https://github.com/noachic/test/raw/master/src/asset/images/coupon/{merchant.merchantId}/merch.png"
+				   >
+		<s:filters>
+			<s:DropShadowFilter blurX="20"
+								blurY="20"
+								distance="0"
+								/>
+		</s:filters>
+	</s:BitmapImage>
 
-	<s:Image id="count"
-			 right="0"
-			 source="@Embed('/asset/resource.swf#gradientBlackCircle')"
-			 />
+	<s:BitmapImage id="count"
+				   right="0"
+				   source="@Embed('/asset/resource.swf#gradientBlackCircle')"
+				   >
+		<s:filters>
+			<s:DropShadowFilter blurX="20"
+								blurY="20"
+								distance="0"
+								/>
+		</s:filters>
+	</s:BitmapImage>
 
 </s:ItemRenderer>
