--- a/src/com/cp/view/CouponView.mxml
+++ b/src/com/cp/view/CouponView.mxml
@@ -8,8 +8,9 @@
 		<mx:ListCollectionView id="couponList" />
 	</fx:Declarations>
 
-	<s:Scroller width="100%"
-				height="100%"
+	<s:Scroller height="100%"
+				left="0"
+				right="20"
 				interactionMode="touch"
 				skinClass="com.cp.skin.common.NoBarScroller"
 				>
