--- a/src/com/cp/itemRenderer/coupon/CouponItemRenderer.mxml
+++ b/src/com/cp/itemRenderer/coupon/CouponItemRenderer.mxml
@@ -6,6 +6,7 @@
 				xmlns:component="com.cp.component.*"
 				xmlns:coupon="com.cp.model.coupon.*"
 				xmlns:merchant="com.cp.model.merchant.*"
+				xmlns:common="com.cp.model.common.*"
 				autoDrawBackground="false"
 				>
 
@@ -13,6 +14,7 @@
 		<coupon:CouponVo id="coupon" />
 		<merchant:MerchantVo id="merchant" />
 
+		<common:ImageCache id="imageCache" />
 
 		<s:Sequence id="imageToDescription"
 					duration="100"
@@ -106,10 +108,10 @@
 							  styleName="graphic scale gradientGray"
 							  >
 			<component:DropShadowLabel width="100%"
-									   paddingLeft="20"
-									   paddingRight="20"
+									   paddingLeft="10"
+									   paddingRight="10"
 									   verticalCenter="0"
-									   styleName="h5 gray3"
+									   styleName="h6 gray3"
 									   text="{coupon.title}"
 									   maxDisplayedLines="1"
 									   />
@@ -120,46 +122,48 @@
 							  styleName="graphic repeat tripes"
 							  >
 			<s:layout>
-				<s:HorizontalLayout paddingBottom="28"
-									paddingLeft="30"
-									paddingRight="30"
-									paddingTop="24"
-									gap="26"
+				<s:HorizontalLayout paddingBottom="10"
+									paddingLeft="10"
+									paddingRight="10"
+									paddingTop="10"
+									gap="10"
 									/>
 			</s:layout>
 
 			<s:SkinnableContainer width="100%"
 								  height="100%"
-								  styleName="graphic scale transparentBackground maskRound"
+								  styleName="graphic maskSmallRound"
 								  >
 				<s:Image id="image"
 						 width="100%"
 						 height="100%"
+						 backgroundColor="#FFFFFF"
 						 source="https://github.com/noachic/test/raw/master/src/asset/images/coupon/{coupon.merchantId}/{coupon.offerImage}"
+						 contentLoader="{imageCache.productImageCache}"
 						 smooth="true"
 						 />
 
 				<s:SkinnableContainer id="description"
 									  width="100%"
 									  height="100%"
-									  styleName="graphic scale fillGrey3 maskRound"
+									  styleName="graphic scale fillGrey3 maskSmallRound"
 									  visible="false"
 									  >
 					<s:layout>
-						<s:VerticalLayout paddingBottom="20"
-										  paddingLeft="20"
-										  paddingRight="20"
-										  paddingTop="20"
-										  gap="20"
+						<s:VerticalLayout paddingBottom="15"
+										  paddingLeft="15"
+										  paddingRight="15"
+										  paddingTop="15"
+										  gap="15"
 										  />
 					</s:layout>
 
-					<component:DropShadowLabel styleName="h5 gray2"
+					<component:DropShadowLabel styleName="h6 gray2"
 											   text="Terms of Use"
 											   />
 
 					<component:DropShadowLabel width="100%"
-											   styleName="h6 gray3"
+											   styleName="p6 gray3"
 											   text="{coupon.offerTerm}"
 											   />
 				</s:SkinnableContainer>
@@ -179,9 +183,11 @@
 			<s:VGroup height="100%"
 					  horizontalAlign="center"
 					  >
-				<s:BitmapImage maxHeight="100"
-							   maxWidth="100"
+				<s:BitmapImage maxWidth="80"
 							   source="https://github.com/noachic/test/raw/master/src/asset/images/coupon/{merchant.merchantId}/{merchant.logo}"
+							   contentLoader="{imageCache.merchantLogoCache}"
+							   fillMode="scale"
+							   scaleMode="letterbox"
 							   >
 					<s:filters>
 						<s:DropShadowFilter alpha="0.4"
@@ -194,7 +200,9 @@
 
 				<s:Rect height="100%" />
 
-				<s:SkinnableContainer styleName="graphic gradientBlackButton"
+				<s:SkinnableContainer scaleX="0.8"
+									  scaleY="0.8"
+									  styleName="graphic gradientBlackButton"
 									  touchTap="dispatchEvent(PrintCouponEvent.startPrint(coupon))"
 									  >
 					<s:BitmapImage horizontalCenter="0"
